Update Dockerfile to install Jupyter and JupyterLab
Added Jupyter and JupyterLab installation to Dockerfile.

--- a/binder/Dockerfile
+++ b/binder/Dockerfile
@@ -1,1 +1,4 @@
-FROM manimkindergarten/manim_texlive
+FROM manimkindergarten/manim_texlive:latest
+
+# Install Jupyter for Binder
+RUN pip install --no-cache-dir notebook jupyterlab
